Finishing the upgrade to spring boot 3+ and using java 22